<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_bares" android:title="@string/bares"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_hoteles" android:title="@string/hoteles"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_turismo" android:title="@string/turismo"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_info" android:title="@string/info"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_map" android:title="@string/Ubicación"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_about" android:title="@string/acerca"
    android:orderInCategory="100" app:showAsAction="never" />
    android:orderInCategory="100" app:showAsAction="never" />

</menu>
